<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.petrsu.robo.roboclient.MainActivity">

    <EditText
        android:id="@+id/editTextMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text_main"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/buttonSearchMain"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMain"
        android:layout_centerHorizontal="true"
        android:onClick="buttonSendClick"
        android:text="@string/button_send_main"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSearchMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/wait_label"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="buttonCancelClick"
        android:text="@string/button_cancel"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/main_label"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonReady"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="buttonReadyClick"
        android:text="@string/button_ready"
        android:textAlignment="center"
        android:visibility="gone" />

</RelativeLayout>
